Tiles drag, to where, I have no idea

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 			.cell.eligible {
 				background: #ff9;
 			}
+			.tile {
+				background: #9ff;
+				width: 100%;
+				height: 100%;
+				-webkit-user-select: none;
+			}
+			.tile.draggable {
+				cursor: move;
+			}
 		</style>
 	</head>
 	<body>
