--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 				width: 400px;
 				height: 400px;
 				border: 1px solid #333;
+				position: relative;
 			}
 			.cell {
 				width: 25%;
@@ -16,6 +17,7 @@
 				border: 1px solid #999;
 				background: #ccc;
 				box-sizing: border-box;
+				position: relative;
 			}
 			.cell:hover {
 				background: #f99;
@@ -28,6 +30,7 @@
 				width: 100%;
 				height: 100%;
 				-webkit-user-select: none;
+				position: absolute;
 			}
 			.tile.draggable {
 				cursor: move;
