drag/drop axis constraint explorations commented out

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			}
 			.tile.dragging {
 				cursor: move;
-				position: fixed;
+				background: #333;
 			}
 			#debug {
 				position: fixed;
