Clicked tile animation is working

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 				-webkit-user-select: none;
 				position: absolute;
 				z-index: 10;
+				-webkit-transition-property: left, top 1s;
+				-webkit-transition-duration: .4s;
+				-webkit-transition-timing-function: ease-in;
 			}
 			.tile.draggable {
 				cursor: move;
