Smoothing out some of the drag/drop, animation settings

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 				-webkit-user-select: none;
 				position: absolute;
 				z-index: 10;
+				color: #000;
+				font-family: Arial;
 				-webkit-transition-property: left, top 1s;
-				-webkit-transition-duration: .4s;
+				-webkit-transition-duration: .33s;
 				-webkit-transition-timing-function: ease-in;
 			}
 			.tile.draggable {
