Fixed draggable state error on mouse events

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 				-webkit-transition-duration: .33s;
 				-webkit-transition-timing-function: ease-in;
 			}
-			.tile.draggable {
+			.tile.draggable,
+			.tile[draggable=true] {
 				cursor: move;
 			}
 			.tile.dragging {
