removing animation end eventlistener in handler

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 	</head>
 	<body>
 		<textarea id="debug"></textarea>
+		<input type="button" id="btn_solve" value="Solve" />
 		<script src="15puzzle.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
