Setting up stories and methods to get puzzle to solve itself

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 			.cell.eligible {
 				background: #ff9;
 			}
+			.cell.eligible .tile {
+				background: #9f9;
+			}
 			.tile {
 				background: #9ff;
 				width: 100%;
@@ -34,7 +37,7 @@
 				z-index: 10;
 				color: #000;
 				font-family: Arial;
-				-webkit-transition-property: left, top 1s;
+				-webkit-transition-property: left, top, background;
 				-webkit-transition-duration: .33s;
 				-webkit-transition-timing-function: ease-in;
 			}
