Solve method coming along, tiles now move automatically, but without strategy

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 	<body>
 		<textarea id="debug"></textarea>
 		<input type="button" id="btn_solve" value="Solve" />
+		<input type="button" id="btn_stopsolve" value="Stop Solve" />
 		<script src="15puzzle.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
