Fixed error that had broken drag/drop after solve() was called

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 				cursor: move;
 				background: #333;
 			}
+			input[type="button"] {
+				zoom: 3.0;
+				float: right;
+				margin: 20px 8px;
+			}
 			#debug {
 				position: fixed;
 				right: 0;
@@ -60,6 +65,7 @@
 		<textarea id="debug"></textarea>
 		<input type="button" id="btn_solve" value="Solve" />
 		<input type="button" id="btn_stopsolve" value="Stop Solve" />
+		<input type="button" id="btn_reset" value="Reset" />
 		<script src="15puzzle.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
