Puzzle is solving itself at times thanks to pattern recognition

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 				-webkit-transition-duration: .33s;
 				-webkit-transition-timing-function: ease-in;
 			}
+			.solving .tile {
+				-webkit-transition-duration: .1s;
+			}
 			.tile.draggable,
 			.tile[draggable=true] {
 				cursor: move;
@@ -57,7 +60,8 @@
 			#debug {
 				position: fixed;
 				right: 0;
-				top: 0;
+				bottom: 0;
+				width: 50%;
 			}
 		</style>
 	</head>
