Some additional styling for presentation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				background-color: #ccc;
 				box-sizing: border-box;
 				position: relative;
+				box-shadow: inset 0 0 10px #000000;
 			}
 			.cell:hover {
 				background-color: #f99;
@@ -67,7 +68,8 @@
 			}
 			.tile.dragging {
 				cursor: move;
-				background-color: #333;
+				background: #000;
+				opacity: .66;
 			}
 			input[type="button"] {
 				zoom: 2.0;
