Further styling, and tweaking autp-solve logic

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				z-index: 10;
 				color: #fff;
 				font-family: Arial;
+				text-shadow: black 0.1em 0.1em 0.2em;
 				-webkit-transition-property: left, top, background;
 				-webkit-transition-duration: .33s;
 				-webkit-transition-timing-function: ease-in;
@@ -71,10 +72,10 @@
 				background: #000;
 				opacity: .66;
 			}
-			input[type="button"] {
-				zoom: 2.0;
+			input {
 				display: block;
-				margin: 20px 8px;
+				margin: 5px 8px 20px 0px;
+				zoom: 2.0;
 			}
 			#debug {
 				position: fixed;
