Adding move counter

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 				margin: 5px 8px 20px 0px;
 				zoom: 2.0;
 			}
+			label {
+				font-family: Arial;
+			}
 			#debug {
 				position: fixed;
 				right: 0;
@@ -96,6 +99,8 @@
 			<input type="button" id="btn_solve" value="Solve" />
 			<input type="button" id="btn_stopsolve" value="Stop Solve" />
 			<input type="button" id="btn_reset" value="Reset" />
+			<label for="inpMovesCount">Moves:</label>
+			<input type="text" id="inpMovesCount" name="inpMovesCount" value="" />
 		</fieldset>
 		<script src="15puzzle.js" type="text/javascript" charset="utf-8"></script>
 	</body>
