--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 				width: 640px;
 				height: 640px;
 				position: relative;
+				font-family: Arial;
 			}
 			.cell {
 				width: 25%;
@@ -38,7 +39,6 @@
 				position: absolute;
 				z-index: 10;
 				color: #fff;
-				font-family: Arial;
 				text-shadow: black 0.1em 0.1em 0.2em;
 				-webkit-transition-property: left, top, background;
 				-webkit-transition-duration: .33s;
@@ -59,6 +59,28 @@
 			#tile13 { background-position: 0% 100%; }
 			#tile14 { background-position: 33% 100%; }
 			#tile15 { background-position: 66% 100%; }
+			
+			
+			#puzBanner.cell {
+				position: absolute;
+				top: 0;
+				left: 0;
+				height: 100%;
+				width: 100%;
+				color: #fff;
+				text-align: center;
+				font-size: 48px;
+				font-weight: bold;
+				line-height: 13;
+				text-shadow: black 0.1em 0.1em 0.2em;
+				float: none;
+				background: rgba(0,0,0,.40);
+				z-index: 10;
+			}
+			
+			.solved .banner {
+				display: block;
+			}
 			
 			.solving .tile {
 				-webkit-transition-duration: .1s;
