Adjusting background colors to eliminate border appearance on tils/cells

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 				background-color: #ccc;
 				box-sizing: border-box;
 				position: relative;
-				box-shadow: inset 0 0 10px #000000;
+				box-shadow: inset 0 0 15px #000000;
 			}
+			/*
 			.cell:hover {
 				background-color: #f99;
 			}
@@ -28,8 +29,10 @@
 			.cell.eligible .tile {
 				background-color: #9f9;
 			}
+			*/
 			.tile {
-				background: #9ff url(lion.png) no-repeat top left;
+				background-color: #9ff;
+				background: transparent url(lion.png) no-repeat top left;
 				width: 100%;
 				height: 100%;
 				padding: 8px;
